--- a/src/assets/i18n/ko-KR.json
+++ b/src/assets/i18n/ko-KR.json
@@ -55,6 +55,50 @@
 		"VERSION_EXCLUSION_FOR_DATE_ONLY": "웹 회의를 지원하지 않는 브라우저 버전입니다. 더 나은 협업 작업 환경을 위해<br>다른 버전 또는, 다른 <span class=\"underline\">지원되는 브라우저</span>를 사용하거나 클라이언트를 다운로드하십시오.",
 		"OLD_EDGE": "사용 중인 브라우저에서는 Avaya Meetings와 호환되지 않습니다. 최상의 경험을 위해 Google Chrome 또는 최신 Microsoft Edge 로 전환하십시오."
 	},
+	"GENERAL": {
+		"ERROR": {
+			"SESSION_HAS_EXPIRED": "세션이 만료되었습니다. 계속하려면 로그인하십시오.",
+			"WINDOW_WIDTH_REACHED_MINIMUM": "죄송합니다. 해당 브라우저 창이 최소 기준보다 작습니다. 브라우저 창을 확장하여 모든 제어를 볼 수 있도록 하십시오.",
+			"INCORRECT_PIN": "PIN은 연속 또는 반복되는 숫자를 포함할 수 없습니다.",
+			"PIN_MIN_LENGTH": "PIN은 {{minLength}}~{{maxLength}}자여야 합니다.",
+			"EMPTY_PIN": "PIN은 비워둘 수 없습니다.",
+			"FAILED_UPLOAD_IMAGE_TITLE": "이미지를 업로드하지 못했습니다.",
+			"FAILED_UPLOAD_IMAGE_MESSAGE": "썸네일 파일이 너무 큽니다. 3MB보다 작은 파일을 업로드하십시오."
+		},
+		"MONTH_AND_YEAR_STRING": {
+			"JANUARY_NUMBER_OF_YEAR": "{{numberOfYear}}년 1월",
+			"FEBRUARY_NUMBER_OF_YEAR": "{{numberOfYear}}년 2월",
+			"MARCH_NUMBER_OF_YEAR": "{{numberOfYear}}년 3월",
+			"APRIL_NUMBER_OF_YEAR": "{{numberOfYear}}년 4월",
+			"MAY_NUMBER_OF_YEAR": "{{numberOfYear}}년 5월",
+			"JUNE_NUMBER_OF_YEAR": "{{numberOfYear}}년 6월",
+			"JULY_NUMBER_OF_YEAR": "{{numberOfYear}}년 7월",
+			"AUGUST_NUMBER_OF_YEAR": "{{numberOfYear}}년 8월",
+			"SEPTEMBER_NUMBER_OF_YEAR": "{{numberOfYear}}년 9월",
+			"OCTOBER_NUMBER_OF_YEAR": "{{numberOfYear}}년 10월",
+			"NOVEMBER_NUMBER_OF_YEAR": "{{numberOfYear}}년 11월",
+			"DECEMBER_NUMBER_OF_YEAR": "{{numberOfYear}}년 12월"
+		},
+		"WEEKDAY_MIN": {
+			"MONDAY": "월",
+			"TUESDAY": "화",
+			"WEDNESDAY": "수",
+			"THURSDAY": "목",
+			"FRIDAY": "금",
+			"SATURDAY": "토",
+			"SUNDAY": "일"
+		},
+		"BROWSERS": {
+			"BROWSER_NOT_SUPPORTED": "를 사용하여 회의에 참가할 수 없습니다. 지원되는 브라우저로 시도해 주십시오.",
+			"YOUR": "귀하의",
+			"BROWSER": "브라우저",
+			"BROWSERS": "브라우저",
+			"BROWSER_OUT_OF_DATE": "가 최신 버전이 아닙니다. 원활한 사용을 위해서는 브라우저를 업데이트하십시오."
+		},
+		"DOWNLOAD": {
+			"NO_CLIENT": "Avaya Meetings Management에서 앱을 찾을 수 없습니다. 지원팀에 문의하십시오."
+		}
+	},
 	"MSG_UTILS": {
 		"DOWNLOAD": "다운로드",
 		"DOWNLOAD_APP": "앱 다운로드",
